<resources>
    <string name="app_name">StockSimulator</string>
    <string name="new_portfolio">New Portfolio</string>
    <string name="portfolio_name">Portfolio name:</string>
    <string name="initial_capital">Initial capital:</string>
    <string name="dollar">$</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_portfolio_button">Delete Portfolio</string>
    <string name="buy_button">BUY</string>
    <string name="sell_button">SELL</string>
    <string name="add_stock_button">Add Stock</string>
    <string name="price_string">Price: %1$s$ Quantity: %2$s</string>
    <string name="stock_dialog_transaction_quantity">Transaction quantity:</string>
    <string name="stock_dialogtransaction_value">Transaction value: %1$s$</string>
    <string name="stock_dialog_balance">Balance: %1$s$</string>
    <string name="portfolios_title">Portfolios</string>
    <string name="stocks_title">%1$s portfolio</string>
    <string name="portfolio_value">Value:</string>
    <string name="portfolio_profit">Profit:</string>
    <string name="portfolio_balance">Balance:</string>
    <string name="name">Name:</string>
    <string name="update_stocks">Update Stocks</string>
    <string name="stock_symbol">Symbol:</string>
    <string name="stock_quantity">Quantity:</string>
    <string name="stock_value">Value:</string>
    <string name="stock_price">Price:</string>
    <string name="stock_profit">Profit:</string>
    <string name="portfolio_add_error_toast">Specify portfolio name and initial capital!</string>
    <string name="tv_stock_dialog">Value: %1$s Balance: %2$s Profit: %3$s</string>
</resources>