<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <AutoCompleteTextView
        android:id="@+id/stock_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/stockdialog_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_string"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/stock_input" />

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/stock_dialog_history_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockdialog_price" />

    <LinearLayout
        android:id="@+id/stock_dialog_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_dialog_history_chart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stock_dialog_transaction_quantity" />

        <EditText
            android:id="@+id/stock_dialog_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/stock_dialog_buy_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/buy_button"
        app:layout_constraintEnd_toStartOf="@id/stock_dialog_sell_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_dialog_linearLayout" />

    <Button
        android:id="@+id/stock_dialog_sell_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/sell_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stock_dialog_buy_button"
        app:layout_constraintTop_toBottomOf="@+id/stock_dialog_linearLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/stock_dialog_transaction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_dialogtransaction_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_dialog_sell_button" />

    <TextView
        android:id="@+id/stock_dialog_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_dialog_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_dialog_transaction_value" />

</androidx.constraintlayout.widget.ConstraintLayout>